# developrs

./: .cSpell.json  .gitignore  .wakatime-project  Cargo.toml  LICENSE  README.md  nx.json  package.json  pnpm-lock.yaml  rustfmt.toml  workspace.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post-create.sh  post-start.sh
.github/workflows/: deploy-features.yml  docker.yml  esteem-release.yml
.husky/: pre-push
apps/cinder/: Cargo.toml  Dockerfile  README.md  project.json
apps/cinder/ci/: CHECKS
apps/cinder/migrations/: 20220116052058_add_initial_models.up.sql
apps/cinder/setup/: install.sh  main.sh
apps/esteem/: Cargo.toml  README.md  install.sh  project.json
apps/esteem/src/: cli.rs  dependencies.rs  graph.rs  lib.rs  main.rs  managers.rs  project.rs  utils.rs  workspace.rs
devcontainer-features/: devcontainer-features.json  install.sh
docker/: Dockerfile  README.md  init-ssh.sh  rust.Dockerfile  script.sh
libs/esteem_core/: Cargo.toml  README.md  project.json
libs/esteem_core/src/: lib.rs
libs/stacona_core/: Cargo.toml  project.json
libs/stacona_core/src/: lib.rs
setup/: commons.sh
templates/devcontainer/: cookiecutter.json
templates/devcontainer/{{cookiecutter.devcontainer_folder_name}}/: Dockerfile  devcontainer.json  docker-compose.yml
templates/django/: cookiecutter.json
templates/django-nuxt-docusaurus/: cookiecutter.json
templates/django-nuxt-docusaurus/{{cookiecutter.project_name}}/: contributors.md
templates/django/{{cookiecutter.project_name}}/: .coveragerc  .gitignore  pyproject.toml
templates/django/{{cookiecutter.project_name}}/{{cookiecutter.django_project_name}}/: settings.py  wsgi.py
templates/django/{{cookiecutter.project_name}}/{{cookiecutter.django_user_model_app}}/: managers.py
templates/nest/: cookiecutter.json
templates/nest/{{cookiecutter.project-name}}/: .env.example  nest-cli.json  package.json  pnpm-lock.yaml
templates/nest/{{cookiecutter.project_name}}/: .env.example  .gitignore  package.json  pnpm-lock.yaml
templates/nuxt/{{cookiecutter.project_name}}/: .eslintrc.js  .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  nuxt.config.js  package.json  stylelint.config.js  tsconfig.json  windi.config.ts
templates/rust/: cookiecutter.json
(+56 files in other folders)
