[package]
name = "esteem"
version = "1.1.6"
description = "A small and fast monorepo manager for NX workspaces"
repository = "https://github.com/IgnisDa/developrs"
authors = ["Diptesh Choudhuri <ignisda2001@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "3.0.4", features = ["cargo"] }
duct = "0.13.5"
env_logger = "0.9.0"
log = "0.4"
npm-package-json = "0.1.3"
once_cell = "1.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
tempfile = "3.3.0"
